# lazybear

./: CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: release.yml  test_pypi.yml
docs/: api.md  expressions.md  index.md
src/lazybear/: __init__.py  _version.py  core.py  deprecated.py  engine.py  expressions.py  io.py  namespaces.py  sql.py
src/lazybear/db/: db_utils.py
src/lazybear/db/clean/: clean_teradata.py  dispatch.py
src/lazybear/db/insert/: bulk_mssql.py  bulk_oracledb.py  bulk_psycopg3.py  bulk_teradata.py  dispatch.py
tests/: conftest.py  test_clean_teradata.py  test_drop.py  test_join.py  test_lazybear.py  test_temp_table.py
