[project]
name = "lazybear-polars"
version = "0.3.1"
description = "Polars-like lazy access to a database."
readme = "README.md"
license = "MIT"
authors = [
    { name = "dcronkite", email = "dcronkite+pypi@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "sqlalchemy>=2.0.49",
]

[project.urls]
Homepage = "https://github.com/kpwhri/lazybear"
Repository = "https://github.com/kpwhri/lazybear"
Issues = "https://github.com/kpwhri/lazybear/issues"
Documentation = "https://kpwhri.github.io/lazybear/"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = 'src'

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
